<resources>
    <string name="app_name">Ebook Reader</string>
    <string name="new_user_sign_up">New User? <b>Sign Up</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="noLogin">Continue Without Login</string>
    <string name="categoryTitle">Add a new Category</string>
    <string name="submit">Submit</string>
    <string name="category_title">Category Title</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="add_category_btn">+ Add New Category</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="forgot_Pwd">Forgot Password?</string>
    <string name="add_new_book">Add a new book</string>
    <string name="title_placeholder">Book Title</string>
    <string name="desc_placeholder">Book Description</string>
    <string name="category_placeholder">Book Category</string>
    <string name="upload_btn">Upload</string>
    <string name="read_btn">Read</string>
    <string name="download_btn">Download</string>
    <string name="fav_btn">Add Favorite</string>
    <string name="update_btn">Update</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="books">Books</string>
    <string name="search_placeholder">Search</string>
    <string name="read_book">Read Book</string>
    <string name="create_account">Create New Account</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_pwd_placeholder">Confirm password</string>
    <string name="create_btn">Create</string>
    <string name="book_details">Book Details</string>
    <string name="book_details_category">Category</string>
    <string name="book_details_date">Date</string>
    <string name="book_details_size">Size</string>
    <string name="book_details_views">Views</string>
    <string name="book_details_download">Downloads</string>
    <string name="book_details_pages">Pages</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="create_at">Create At</string>
    <string name="fav_count">Favorite</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite_label">Favorite Books</string>
</resources>