<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfDetailActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--Back button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white"/>

        <!--Toolbar title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_details"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <!--All Content under scrollview-->
    <ScrollView
        android:layout_above="@id/bookOptionsLl"
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Book info-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Book preview-->
                <RelativeLayout
                    android:id="@+id/pdfRL"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <!--Pdf view-->
                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <!--progress-->
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

                <!--Book title-->
                <TextView
                    android:id="@+id/titleTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pdfRL"
                    android:text="Title of Book"
                    tools:ignore="UnknownId" />

                <!--Table-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleTv"
                    android:layout_toEndOf="@+id/pdfRL">

                    <!--Category Row-->
                    <TableRow>
                        <TextView
                            android:id="@+id/categoryLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_category"/>

                        <TextView
                            android:id="@+id/categoryTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>

                    </TableRow>

                    <!--Date Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/dateLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_date"/>
                        <TextView
                            android:id="@+id/dateTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>


                    </TableRow>

                    <!--Size Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/sizeLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_size"/>
                        <TextView
                            android:id="@+id/sizeTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>

                    </TableRow>

                    <!--Views Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/viewsLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_views"/>
                        <TextView
                            android:id="@+id/viewsTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>

                    </TableRow>

                    <!--Downloads Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/downloadsLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_download"/>
                        <TextView
                            android:id="@+id/downloadsTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/pagesLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/book_details_pages"/>
                        <TextView
                            android:id="@+id/pagesTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:text="N/A"/>

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <!--Book description-->
            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="The description of the book"
                android:textColor="@color/black"/>


        </LinearLayout>

    </ScrollView>

    <!--Layout for button at bottom-->
    <LinearLayout
        android:id="@+id/bookOptionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/design_default_color_primary"
        android:layout_alignParentBottom="true">

        <!--Button: Open to view pdf-->

        <Button
            android:id="@+id/readBookBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_book_white"
            android:text="@string/read_btn"
            android:textColor="@color/white"
            android:background="@color/purple_200"/>

        <!--Button: download pdf-->
        <Button
            android:id="@+id/downloadBookBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_download_white"
            android:text="@string/download_btn"
            android:textColor="@color/white"
            android:background="@color/purple_200"/>

        <Button
            android:id="@+id/favoriteBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_favorite_border_white"
            android:text="@string/fav_btn"
            android:background="@color/purple_200"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>