<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/profile_background" />
    <!--    Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/profileEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_white" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/shape_rect_01" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person_gray"
        app:shapeAppearance="@style/styleRoundedCornersImg" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="Username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTv"
        android:layout_centerHorizontal="true"
        android:text="abc@gmail.com"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/detailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTv"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accountTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_at"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createAtTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav_count"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favoriteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/detailsLl"
        android:background="@color/gray01"/>
    <TextView
        android:id="@+id/favoriteBookLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:text="@string/favorite_label"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favoriteBookLabelTv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_books_favorite"/>




</RelativeLayout>